# obe-app

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  backup.sh  deploy.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  k8s-deploy.sh  manage.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docker.yml
apps/accounts/: models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/exports/: admin.py  apps.py  filters.py  models.py  population.py  processors.py  serializers.py  tasks.py  tiles.py
apps/exports/migrations/: 0001_initial.py  0002_alter_export_output_format_alter_export_source.py  0003_exportrun_tiles_file.py
apps/exports/urls/: api.py  web.py
apps/exports/views/: api_root.py  api_views.py  web_views.py
apps/frontend/: __init__.py  urls.py  views.py
config/: health.py  settings.py  urls.py
docs/: report.md
k8s/: README.md  configmap.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  storage.yaml  web.yaml  worker.yaml
templates/: 404.html  base.html  export.html  index.html  public_exports.html
tests/: test_api.py
