[project]
name = "obe-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-filter>=24.3",
    "djangorestframework>=3.16.1",
    "djangorestframework-gis>=1.2.0",
    "djangorestframework-simplejwt>=5.3.0",
    "drf-spectacular>=0.27.0",
    "gunicorn>=23.0.0",
    "huey>=2.5.3",
    "obe>=0.0.7",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "toml>=0.10.2",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "django-debug-toolbar>=6.0.0",
    "django-extensions>=4.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
